--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@commitlint/config-conventional": "^12.1.4",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
+    "@types/webpack-env": "^1.16.2",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
     "autoprefixer": "^10.2.6",
@@ -44,11 +45,14 @@
     "eslint-plugin-unicorn": "^34.0.0",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^6.2.12",
+    "glob": "^7.1.7",
     "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
+    "mini-css-extract-plugin": "^2.0.0",
     "node-sass": "^6.0.1",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "postcss": "^8.3.5",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-html": "^0.36.0",
@@ -57,6 +61,7 @@
     "postcss-preset-env": "^6.7.0",
     "postcss-syntax": "^0.36.2",
     "prettier": "2.3.2",
+    "purgecss-webpack-plugin": "^4.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "sass-loader": "^12.1.0",
@@ -67,9 +72,11 @@
     "stylelint-config-standard": "^22.0.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.3.0",
     "stylelint-order": "^4.1.0",
+    "terser-webpack-plugin": "^5.1.4",
     "typescript": "3",
     "url-loader": "^4.1.1",
     "webpack": "^5.41.1",
+    "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^4.0.0-beta.3",
     "webpack-merge": "^5.8.0",
