--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@typescript-eslint/parser": "^4.28.1",
     "autoprefixer": "^10.2.6",
     "babel-loader": "^8.2.2",
+    "classnames": "^2.3.1",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "conventional-changelog-cli": "^2.1.1",
     "copy-webpack-plugin": "^9.0.1",
