--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,7 +45,10 @@
     "resolveJsonModule": true,                // 支持导入 json 模块
     "baseUrl": "./",                       /* Base directory to resolve non-absolute module names. */
     "paths": {
-      "Base/*": ["src/*"]
+      "Base/*": ["src/*"],
+      "Components/*": ["src/components/*"],
+      "Utils/*": ["src/utils/*"],
+      "Entity/*": ["src/entity/*"]
     },                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
